examples/test/testpolicy16959.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16959
  namespace: namespace13
spec:
  podSelector:
    matchLabels:
      key9: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value31
          key17: value8
          key10: value42
      podSelector:
        matchLabels:
          key37: value42
